<resources>
    <string name="app_name">PostmanAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_post">POST</string>
    <string name="request_params">Params</string>
    <string name="request_header">Header</string>
    <string name="request_body">Body</string>
    <string name="add">add</string>
    <string name="key_hint">key</string>
    <string name="value_hint">Value</string>
    <string name="make_request">Request</string>
    <string name="delete_param">delete</string>
</resources>
