<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/main_container_layout"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/url_container"
            android:padding="@dimen/padding_small"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/round_corners_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/request_type"
                android:textSize="@dimen/textsize_xmedium"
                android:text="@string/dummy_post"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:textSize="@dimen/textsize_xmedium"
                android:maxLines="1"
                android:textColor="@color/white"
                android:hint="https://"
                android:textColorHint="@color/hdfc_light_grey"
                android:layout_toLeftOf="@+id/request_params"
                android:layout_toRightOf="@+id/request_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/request_params"
                android:textSize="@dimen/textsize_xmedium"
                android:text="@string/request_params"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/padding_small"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/request_header"
                android:textSize="@dimen/textsize_xmedium"
                android:text="@string/request_header"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_toRightOf="@+id/request_header"
                android:id="@+id/request_body"
                android:textSize="@dimen/textsize_xmedium"
                android:text="@string/request_body"
                android:layout_width="wrap_content"
                android:textColor="@color/hdfc_light_grey"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_above="@+id/request_button"
        android:layout_below="@+id/main_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/body_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/margin_small"
                    android:id="@+id/form_data_layout"
                    android:layout_below="@+id/data_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </RelativeLayout>
                <RelativeLayout
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/margin_small"
                    android:id="@+id/form_data_encoded_layout"
                    android:layout_below="@+id/data_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </RelativeLayout>
                <RelativeLayout
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/margin_small"
                    android:id="@+id/raw_data_layout"
                    android:layout_below="@+id/data_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </RelativeLayout>
                <RadioGroup
                    android:id="@+id/data_types"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <RadioButton
                        android:textColor="@color/color_white"
                        android:text="form-data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:textColor="@color/color_white"
                        android:text="form-data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:textColor="@color/color_white"
                        android:text="form-data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/header_layout"
                android:visibility="visible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/request_button"
        android:background="@color/colorPrimary"
        android:alpha="0.5"
        android:textColor="@color/white"
        android:text="@string/make_request"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        android:tint="@color/colorPrimary"
        android:layout_margin="@dimen/margin_small"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add" />
</RelativeLayout>